[gd_scene load_steps=11 format=2]

[ext_resource path="res://main_menu/MainMenu.gd" type="Script" id=1]
[ext_resource path="res://main_menu/Isometric Forest Tileset_Background.png" type="Texture" id=2]
[ext_resource path="res://main_menu/flagUS.png" type="Texture" id=3]
[ext_resource path="res://main_menu/flagBrazil.png" type="Texture" id=4]
[ext_resource path="res://main_menu/Hand-cursor.png" type="Texture" id=5]
[ext_resource path="res://interface/fonts/MyriadPro-Semibold.otf" type="DynamicFontData" id=6]
[ext_resource path="res://player/art/Idle_002.png" type="Texture" id=7]

[sub_resource type="DynamicFontData" id=1]

hinting = 2
font_path = "res://Main Menu/Fonts/Myriad Pro Light Italic.otf"

[sub_resource type="DynamicFont" id=2]

size = 40
use_mipmaps = false
use_filter = false
font_data = SubResource( 1 )
_sections_unfolded = [ "Font", "Settings" ]

[sub_resource type="DynamicFont" id=4]

size = 70
use_mipmaps = false
use_filter = false
font_data = ExtResource( 6 )
_sections_unfolded = [ "Font", "Font/fallback", "Settings" ]

[node name="MainMenu" type="CanvasLayer"]

layer = 2
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )
transform = Transform2D( 1, 0, 0, 1, 0, 0 )
script = ExtResource( 1 )
_sections_unfolded = [ "Rect" ]

[node name="NinePatchRect" type="NinePatchRect" parent="." index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 1024, 600 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 2 )

[node name="HBoxContainer" type="HBoxContainer" parent="NinePatchRect" index="0"]

editor/display_folded = true
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -374.0
margin_top = -75.0
margin_right = -20.0
margin_bottom = -20.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 0

[node name="LanguageChoose" type="Label" parent="NinePatchRect/HBoxContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 26.0
margin_right = 9.0
margin_bottom = 28.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 2 )
text = "Language:"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Rect", "custom_fonts" ]

[node name="Container2" type="Container" parent="NinePatchRect/HBoxContainer" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 13.0
margin_right = 23.0
margin_bottom = 55.0
rect_min_size = Vector2( 10, 0 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
_sections_unfolded = [ "Rect" ]

[node name="buttonUS" type="TextureButton" parent="NinePatchRect/HBoxContainer" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 27.0
margin_right = 105.0
margin_bottom = 55.0
rect_min_size = Vector2( 78, 55 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 3 )
expand = true
_sections_unfolded = [ "Textures", "Visibility" ]

[node name="Container" type="Container" parent="NinePatchRect/HBoxContainer" index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 109.0
margin_right = 119.0
margin_bottom = 55.0
rect_min_size = Vector2( 10, 0 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
_sections_unfolded = [ "Rect" ]

[node name="buttonBR" type="TextureButton" parent="NinePatchRect/HBoxContainer" index="4"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 123.0
margin_right = 201.0
margin_bottom = 55.0
rect_min_size = Vector2( 78, 55 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 4 )
expand = true
_sections_unfolded = [ "Rect", "Size Flags", "Textures", "Theme", "Visibility" ]

[node name="HandCursor" type="TextureRect" parent="NinePatchRect" index="1"]

anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -460.0
margin_top = -261.0
margin_right = -305.0
margin_bottom = -170.0
rect_min_size = Vector2( 155, 91 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 5 )
expand = true
stretch_mode = 0
_sections_unfolded = [ "Anchor", "Rect", "Transform", "Z Index" ]

[node name="Timer" type="Timer" parent="NinePatchRect" index="2"]

process_mode = 1
wait_time = 1.0
one_shot = false
autostart = false

[node name="PositionStart" type="Control" parent="NinePatchRect" index="3"]

anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -460.0
margin_top = -261.0
margin_right = -459.0
margin_bottom = -260.0
rect_min_size = Vector2( 1, 1 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
_sections_unfolded = [ "Rect" ]

[node name="PositionCredits" type="Control" parent="NinePatchRect" index="4"]

anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -460.0
margin_top = -188.0
margin_right = -459.0
margin_bottom = -187.0
rect_min_size = Vector2( 1, 1 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
_sections_unfolded = [ "Rect", "Transform" ]

[node name="PositionExit" type="Control" parent="NinePatchRect" index="5"]

anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -460.0
margin_top = -111.0
margin_right = -459.0
margin_bottom = -110.0
rect_min_size = Vector2( 1, 1 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
_sections_unfolded = [ "Rect" ]

[node name="VBoxContainer" type="VBoxContainer" parent="NinePatchRect" index="6"]

editor/display_folded = true
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -292.0
margin_top = -251.0
margin_right = -148.0
margin_bottom = -30.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 0

[node name="Start" type="Label" parent="NinePatchRect/VBoxContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 215.0
margin_bottom = 71.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 4 )
text = "Start"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Mouse", "Rect", "custom_fonts" ]

[node name="Credits" type="Label" parent="NinePatchRect/VBoxContainer" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 75.0
margin_right = 215.0
margin_bottom = 146.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 4 )
text = "Credits"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Mouse", "custom_fonts" ]

[node name="Exit" type="Label" parent="NinePatchRect/VBoxContainer" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 150.0
margin_right = 215.0
margin_bottom = 221.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 4 )
text = "Exit"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Mouse", "custom_fonts" ]

[node name="TextureRect" type="TextureRect" parent="NinePatchRect" index="7"]

anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -162.0
margin_top = -162.0
margin_right = 162.0
margin_bottom = 162.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 7 )
expand = true
stretch_mode = 0

[connection signal="pressed" from="NinePatchRect/HBoxContainer/buttonUS" to="." method="_on_buttonUS_pressed"]

[connection signal="pressed" from="NinePatchRect/HBoxContainer/buttonBR" to="." method="_on_buttonBR_pressed"]

[connection signal="timeout" from="NinePatchRect/Timer" to="." method="_on_Timer_timeout"]

[connection signal="mouse_entered" from="NinePatchRect/VBoxContainer/Start" to="." method="_on_Start_mouse_entered"]

[connection signal="mouse_entered" from="NinePatchRect/VBoxContainer/Credits" to="." method="_on_Credits_mouse_entered"]

[connection signal="mouse_entered" from="NinePatchRect/VBoxContainer/Exit" to="." method="_on_Exit_mouse_entered"]


